--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,15 +1,11 @@
 :root {
   --color-white: #FFFFFF;
   --color-Black: #222;
-  --color-green_dark: #042940;
   --color-green_turquoise: #005C53;
-  --color-green_basic: #9FC131;
   --color-orange_pumpkin: #FC8C62;
-  --color-green_soap: #D6D58E;
   --color-dwttxt: #FFFFFF;
   --color-dwtund: #FC8C62;
   --font-big: 26px;
-  --font-intermediate: 10px;
   --font-medium: 18px;
   --font-small: 10px;
 }
@@ -34,7 +30,7 @@ body {
 }
 
 .section {
-  padding: 100px 50px;
+  padding: 100px 20px;
 }
 
 .title-container {
@@ -107,7 +103,7 @@ p {
 
 .titre-image {
   position: absolute;
-  top: 45%;
+  top: 40%;
   left: 0;
   width: 100%;
   padding: 20px;
@@ -117,7 +113,7 @@ p {
   text-align: center;
 }
 
-.section-top {
+.section--top {
   position: relative;
   background-image: url(../assets/images/test-wave-orange.svg);
   background-repeat: no-repeat;
@@ -126,11 +122,14 @@ p {
   bottom: 0;
   left: 0;
 }
+.section--top__pad {
+  padding: 80px 20px 120px 20px;
+}
 
 .wave-section {
   min-height: 80vh;
   width: 100%;
-  color: var(--color-green_soap);
+  color: var(--color-Black);
   position: relative;
   padding-left: 0;
   padding-right: 0;
@@ -142,7 +141,6 @@ p {
 }
 .img--text__flex {
   padding-left: 50px;
-  padding-top: 150px;
 }
 
 .image-container {
@@ -160,17 +158,6 @@ p {
   color: var(--color-Black);
 }
 
-.barre {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateY(-50%);
-  width: 40%;
-  height: 3px;
-  border-radius: 2px;
-  background-color: var(--color-green_turquoise);
-}
-
 .parag {
   padding-top: 40px;
 }
@@ -186,7 +173,6 @@ p {
 
 .container-flex {
   display: flex;
-  justify-content: space-between;
   gap: 20px;
 }
 
@@ -196,7 +182,7 @@ p {
   align-items: flex-start;
   justify-content: center;
   min-height: 450px;
-  max-width: 450px;
+  max-width: 400px;
   display: flex;
   border-radius: 15px;
   gap: 40px;
@@ -227,13 +213,13 @@ p {
   border-radius: 15px;
 }
 
-.pad-hyp {
-  padding-top: 35px;
-}
-
 .slider {
   background-color: var(--color-green_turquoise);
   height: 250px;
+  max-width: 1000px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   position: relative;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   border-radius: 20px;
@@ -319,10 +305,6 @@ p {
 }
 .btn {
   cursor: pointer;
-  font-family: snicker, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: var(--font-medium);
   padding: 8px 32px;
   border: 3px solid;
   border-radius: 56px;
@@ -333,7 +315,8 @@ p {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  font-size: var(--font-big);
+  font-size: var(--font-medium);
+  color: var(--color-Black);
   font-family: "mr-eaves-xl-modern", sans-serif;
   font-weight: bold;
   font-style: normal;
@@ -360,15 +343,12 @@ p {
   flex-flow: row wrap;
   justify-content: space-around;
   gap: 40px;
-  padding: 8px;
-  margin: 16px 32px;
+  margin: 16px 16px;
 }
 
 .border-legend {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 20px;
+  padding: 10px;
   border: 3px solid var(--color-green_turquoise);
   border-radius: 3px;
 }
@@ -383,7 +363,6 @@ p {
 
 .pad-no {
   padding: 0;
-  margin-left: 20px;
 }
 
 .flex-tfa {
@@ -483,42 +462,48 @@ p {
 }
 
 .footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   background-color: var(--color-green_turquoise);
 }
 
-.credits a, .credits span, .subnav__el a {
+.subNav {
+  list-style: none;
+  text-transform: uppercase;
+  font-size: 14px;
+  align-items: center;
+  padding: 30px 0 20px 0;
+  margin: 0;
+}
+
+.subNav__el a {
+  text-decoration: none;
   color: var(--color-white);
+  font-weight: 500;
+}
+
+.subNav__el a:hover {
+  color: #E65E56;
+  text-decoration: underline;
 }
 
 .credits {
-  padding-top: 40px;
+  color: var(--color-white);
+  padding: 10px 0 0 0;
 }
 
-.credits, .subnav {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
-  gap: 25px;
+.credits a {
+  text-decoration: none;
 }
 
-.credits a:hover {
+.display-cred {
+  color: var(--color-white);
+}
+
+.display-cred:hover {
   color: var(--color-orange_pumpkin);
-  transition: 0.3s;
-}
-
-.subnav {
-  margin: 0;
-  padding: 25px 0;
-  list-style: none;
-}
-
-.subnav__el a:hover {
-  color: var(--color-orange_pumpkin);
-  transition: 0.3s;
-}
-
-.credits span {
-  transition: color 1s;
+  text-decoration: underline;
 }
 
 .dwt {
@@ -536,9 +521,12 @@ p {
 }
 
 @media (max-width: 700px) {
+  .img-tab {
+    display: none;
+  }
   .menu__liste {
     position: fixed;
-    background-color: var(--color-green_soap);
+    background-color: var(--color-green_turquoise);
     top: 0;
     left: 0;
     display: flex;
@@ -569,7 +557,6 @@ p {
   }
   .menu__el a:hover, .menu__el a:focus {
     color: var(--color-orange_pumpkin);
-    letter-spacing: 5px;
   }
   .menu--open .menu__liste {
     transform: translateX(0);
@@ -628,17 +615,12 @@ p {
   .menu__burger span::after {
     transform: translateY(10px);
   }
-  .titre-image {
-    top: 35%;
-    left: 0;
-  }
   .img--text {
-    display: flex;
     flex-direction: column;
   }
   .img--text__flex {
+    padding-top: 80px;
     padding-left: 0;
-    padding-top: 64px;
   }
   .img-search {
     width: 300px;
@@ -649,6 +631,7 @@ p {
   }
   .container-flex {
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
   }
   .container-search {
@@ -658,12 +641,23 @@ p {
   .container-hyp {
     flex-direction: column;
   }
+  .border-legend {
+    flex-direction: column;
+    align-items: center;
+  }
+  .pad-no {
+    margin-top: 20px;
+  }
 }
 @media (min-width: 701px) {
   :root {
-    --font-big: 26px;
+    --font-big: 47px;
+    --font-intermediate: 29px;
     --font-medium: 18px;
-    --font-small: 10px;
+    --font-small: 11px;
+  }
+  .bar {
+    margin-top: 27px;
   }
   body {
     font-size: 16px;
@@ -675,7 +669,19 @@ p {
     font-size: var(--font-big);
   }
   .title--ccl {
-    font-size: 20px;
+    font-size: var(--font-intermediate);
+  }
+  .titre-image {
+    top: 30%;
+  }
+  .section {
+    padding: 100px 20px;
+  }
+  .section--top__pad {
+    padding: 80px 80px 120px 80px;
+  }
+  .img-phone {
+    display: none;
   }
   .menu__burger {
     display: none;
@@ -706,8 +712,11 @@ p {
     transform-origin: center;
   }
   .menu__el a:hover {
-    color: var(--color-orange_pumpkin);
-    text-decoration: underline;
+    color: var(--color-white);
+    background-color: var(--color-orange_pumpkin);
+    text-decoration: none;
+    padding: 2px 4px 2px 4px;
+    border-radius: 2px;
   }
   .menu__el--active {
     background-color: var(--color-orange_pumpkin);
@@ -721,10 +730,10 @@ p {
   .img--text {
     display: flex;
     justify-content: center;
+    align-items: center;
   }
   .img--text__flex {
     padding-left: 50px;
-    padding-top: 100px;
   }
   .container-flex {
     flex-direction: row;
@@ -756,36 +765,43 @@ p {
     grid-column: 1/2;
     grid-row: 3;
   }
+  .border-legend {
+    justify-content: space-around;
+    padding: 20px;
+  }
+  .pad-no {
+    margin-left: 20px;
+  }
+  .barre {
+    display: none;
+  }
 }
 @media (min-width: 1000px) {
+  :root {
+    --font-big: 52px;
+    --font-intermediate: 32px;
+    --font-medium: 20px;
+    --font-small: 12px;
+  }
+  .bar {
+    margin-top: 32px;
+  }
+  .titre-image {
+    top: 40%;
+  }
   body {
     font-size: 18px;
-  }
-  .menu__el a:before {
-    content: "";
-    position: absolute;
-    bottom: 10px;
-    left: 0;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: var(--color-orange_pumpkin);
-    transform: scaleX(0);
-    transition: transform 0.3s ease;
   }
   .menu__el a:hover {
     color: var(--color-white);
     background-color: var(--color-orange_pumpkin);
-    transform: rotate(360deg);
-    padding: 6px 4px 2px 4px;
+    text-decoration: none;
+    padding: 2px 4px 2px 4px;
     border-radius: 2px;
     letter-spacing: 1px;
   }
-  .menu__el a:hover:before {
-    transform: scaleX(1);
-  }
   .svg-fruits {
-    bottom: 80px;
+    bottom: 30px;
     width: 130px;
   }
   .container-hyp {
