--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -6,6 +6,7 @@
   --color-dwttxt: #FFFFFF;
   --color-dwtund: #FC8C62;
   --font-big: 26px;
+  --font-intermediate: 22px;
   --font-medium: 18px;
   --font-small: 10px;
 }
@@ -389,6 +390,13 @@ p {
   color: var(--color-white);
 }
 
+.vid-ccl {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 40px;
+}
+
 .credits__list {
   display: flex;
   flex-direction: column;
@@ -459,6 +467,28 @@ p {
 
 .square-flex {
   display: flex;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.title--ui {
+  padding: 40px 0 40px 0;
+}
+
+.title--ui__1 {
+  font-size: var(--font-big);
+}
+
+.title--ui__2 {
+  font-size: var(--font-intermediate);
+}
+
+.title--ui__3 {
+  font-size: var(--font-medium);
+}
+
+.section--uicred {
+  padding: 100px 20px;
 }
 
 .footer {
@@ -648,6 +678,13 @@ p {
   .pad-no {
     margin-top: 20px;
   }
+  .vid-ccl {
+    width: 100%;
+  }
+  .square {
+    height: 60px;
+    width: 60px;
+  }
 }
 @media (min-width: 701px) {
   :root {
@@ -775,6 +812,9 @@ p {
   .barre {
     display: none;
   }
+  .section--uicred {
+    padding: 100px 100px;
+  }
 }
 @media (min-width: 1000px) {
   :root {
@@ -806,5 +846,8 @@ p {
   }
   .container-hyp {
     justify-items: center;
+  }
+  .section--uicred {
+    padding: 100px 200px;
   }
 }/*# sourceMappingURL=app.css.map */
