--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -473,6 +473,7 @@ p {
 
 .title--ui {
   padding: 40px 0 40px 0;
+  margin: 0;
 }
 
 .title--ui__1 {
@@ -489,6 +490,10 @@ p {
 
 .section--uicred {
   padding: 100px 20px;
+}
+
+.pad-ui {
+  padding-bottom: 40px;
 }
 
 .footer {
