--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -548,6 +548,7 @@ p{
 
 .title--ui{
   padding: 40px 0 40px 0;
+  margin: 0;
 }
 
 .title--ui__1{
@@ -564,6 +565,10 @@ p{
 
 .section--uicred{
   padding: 100px 20px;
+}
+
+.pad-ui{
+  padding-bottom: 40px;
 }
 
 // FOOTER
