--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -20,6 +20,7 @@
 
 html{
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -78,8 +79,34 @@ header{
 
 .title--ccl{
   font-size: 20px;
-  color: var(--color-Black);
+  color: #222;
+  font-weight: bolder;
   padding: 10px 0 20px 0;
+}
+
+.title--ccl2{
+  font-size: 20px;
+  color: #FFFFFF;
+  font-weight: bolder;
+  padding: 10px 0 20px 0;
+}
+
+.title__span{
+  font-family: "mr-eaves-xl-modern", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: var(--font-intermediate);
+  color: var(--color-white);
+  display: block;
+  padding-top: 20px;
+}
+
+.title-fonc{
+  text-align: center;
+  border: 3px solid var(--color-green_turquoise);
+  border-radius: 3px;
+  padding: 5px 8px;
+  margin: 40px 400px 40px 400px;
 }
 
 p{
@@ -109,9 +136,21 @@ p{
 }
 
 .img-soutien{
-  display: block;
-  width: 100%;
-  margin: 300px 0 300px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 80px 10%;
+}
+
+.img__intro{
+  width: 80%;
+  margin-top: 20px;
+}
+
+.title-img{
+  font-size: 64px;
+  color: var(--color-orange_pumpkin);
+  padding-top: 40px;
 }
 
 // SECTION 1
@@ -213,7 +252,17 @@ p{
 
 .container-hyp{
   display: flex;
-  gap: 20px; 
+  gap: 100px; 
+  margin: 0 5% 100px;
+
+}
+
+.img__grid{
+  width: 90%;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .border-grid{
@@ -416,6 +465,14 @@ p{
   width: 30px;
 }
 
+.svg-fonct{
+  width: 40px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 40px 0 20px 0;
+}
+
 .hidden {
   display: none;
 }
@@ -433,13 +490,14 @@ p{
 }
 
 .border-tfa{
-  border: 3px solid var(--color-green_turquoise);
-  border-radius: 15px;
+  // border: 3px solid var(--color-green_turquoise);
+  // border-radius: 15px;
   max-width: 800px;
   padding: 20px;
 }
 
 // SECTION 6
+
 
 .border-ccl{
   background-color: var(--color-green_turquoise);
@@ -457,6 +515,7 @@ p{
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 40px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 // PAGE CREDITS
@@ -836,6 +895,10 @@ p{
     font-size: var(--font-intermediate);
   }
 
+  .title--ccl2{
+    font-size: var(--font-intermediate);
+  }
+
   .titre-image {
     top: 30%;
   }
@@ -847,8 +910,29 @@ p{
   .section--top{
   
     &__pad{
-      padding: 80px 80px 120px 80px;
+      padding: 80px 5% 120px 5%;
     }
+  }
+
+  .img-soutien{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    justify-items: center;
+  }
+  
+  .img__intro{
+    grid-column: 2;
+    grid-row: 1;
+    width: 80%;
+    margin-top: 20px ;
+    justify-self: center;
+  }
+  
+  .title-img{
+    grid-column: 1;
+    grid-row: 1;
+    align-self: center;
   }
 
   .img-phone{
@@ -875,30 +959,27 @@ p{
       padding: 0;
       box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
     }
+
+    &__el:hover{
+      background-color: var(--color-orange_pumpkin);
+    }
     
     &__el{
       position: relative;
       padding: 20px;
       list-style: none;
+      transition: all 0.3s ease;
     }
+    
     
     &__el a{
-      color: var(--color-);
+      color: var(--color-Black);
       text-decoration: none;
-      transition: all 0.3s ease;
       transform-origin: center;
     }
-    
-    &__el a:hover {
-      color: var(--color-green_turquoise);
-      background-color: var(--color-orange_pumpkin);
-      text-decoration: none;
-      border-radius: 2px;
-    }
-    
+  
     &__el--active{
       background-color: var(--color-orange_pumpkin);
-      color: var(--color-green_turquoise);
     }
   }
 
@@ -940,26 +1021,45 @@ p{
     min-height: 250px;
     max-width: 550px;
   }
-    
-  .right{
-    grid-column: 2/2;
-    grid-row: 2;
+
+  .grid--img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-    
+
   .left{
     grid-column: 1/2;
     grid-row: 1;
   }
-    
-  .right-2{
-    grid-column: 2/2;
-    grid-row: 4;
+
+  .right--img{
+    grid-column: 2/3;
+    grid-row: 1;
   }
-    
-  .left-2{
+
+  .right{
+    grid-column: 2/2;
+    grid-row: 2;
+  }
+
+  .left--img{
     grid-column: 1/2;
-    grid-row: 3;
-  }  
+    grid-row: 2;
+  }
+
+  .para{
+    padding-top: 40px;
+  }
+
+  .img__grid{
+    width: 80%;
+  }
+
+  .pad-text{
+    padding-left: 60px;
+    padding-bottom: 40px;
+  }
 
   // SECTION 4
 
@@ -1006,12 +1106,11 @@ p{
   .menu{
 
     &__el a:hover {
-      color: var(--color-green_turquoise);
-      background-color: var(--color-orange_pumpkin);
       text-decoration: none;
       border-radius: 2px;
     }
   }
+
 
   // SECTION 1
 
@@ -1032,10 +1131,6 @@ p{
   }
 }
 
-.sect-bac{
-  background-color: var(--color-green_turquoise);
-  margin-top: 100px;
-}
 
 
 
