--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -62,7 +62,6 @@ header{
 .title {
   font-family: "june-expt-variable", sans-serif;
   font-variation-settings: "STYL" 0;
-  margin: 0 10px;
 }
 
 .title--med{
@@ -148,7 +147,7 @@ p{
 }
 
 .title-img{
-  font-size: 64px;
+  font-size: 34px;
   color: var(--color-orange_pumpkin);
   padding-top: 40px;
 }
@@ -485,6 +484,14 @@ p{
 
 .flex-tfa{
   display: flex;
+  flex-direction: column;
+  padding-bottom: 60px;
+  gap: 40px;
+  margin: 0 5% 40px;
+}
+
+.flex-tfa2{
+  display: flex;
   justify-content: center;
   padding-bottom: 60px;
 }
@@ -494,6 +501,27 @@ p{
   // border-radius: 15px;
   max-width: 800px;
   padding: 20px;
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+.border-tfa2{
+  grid-column: 2/3;
+  grid-row: 1/2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.img-famille{
+  width: 100%;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.img--container{
+  max-width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 // SECTION 6
@@ -503,7 +531,7 @@ p{
   background-color: var(--color-green_turquoise);
   border-radius: 15px;
   max-width: 800px;
-  padding: 20px;
+  padding: 40px;
 }
 
 .color-txt{
@@ -515,6 +543,7 @@ p{
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 40px;
+  margin-top: 40px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
@@ -682,6 +711,40 @@ p{
   fill: var(--color-dwtund);
 }
 
+.flex-arrow{
+  display: flex;
+  gap: 10px;
+  margin: 20px 0 0 40px;
+}
+
+.text-stat{
+  padding: 15px 0 0 0;
+  max-width: 45ch;
+}
+
+.test-arrow{
+  display: flex;
+  flex-direction: column;
+}
+
+.color-stat{
+  color: var(--color-orange_pumpkin);
+}
+
+.stat-arrow{
+  width: 40px;
+}
+
+.pad-text{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  padding-bottom: 40px;
+}
+
+.text-width{
+  max-width: 800px;
+}
 
 @media (max-width: 700px){
 
@@ -864,6 +927,10 @@ p{
     height: 60px;
     width: 60px;
   }
+
+  .test-arrow{
+    margin: 100px 0 20px 0;
+  }
 }
 
 @media (min-width: 701px){
@@ -937,6 +1004,12 @@ p{
 
   .img-phone{
     display: none;
+  }
+
+  .flex-tfa{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(1, 1fr);
   }
 
   // HEADER ET MENU
@@ -1056,11 +1129,6 @@ p{
     width: 80%;
   }
 
-  .pad-text{
-    padding-left: 60px;
-    padding-bottom: 40px;
-  }
-
   // SECTION 4
 
   .border-legend{
@@ -1079,6 +1147,10 @@ p{
   .section--uicred{
     padding: 100px 100px;
   
+  }
+
+  .test-arrow{
+    margin: 100px 100px 20px 100px;
   }
 }
 
