--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1185,6 +1185,17 @@ p{
   }
 }
 
+@media (min-width: 1600px){
+
+  .img-famille{
+    margin-bottom: 150px;
+  }
+
+  .svg-fruits{
+    bottom: 200px;
+  }
+}
+
 
 
 
